--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/router": "^19.2.0",
     "@supabase/supabase-js": "^2.49.4",
     "@tailwindcss/postcss": "^4.1.5",
+    "ngx-toastr": "^19.0.0",
     "postcss": "^8.5.3",
     "rxjs": "~7.8.0",
     "tailwindcss": "^4.1.5",
@@ -38,10 +39,9 @@
     "karma-jasmine-html-reporter": "~2.1.0",
     "typescript": "~5.7.2"
   },
-
   "overrides": {
-    "@supabase/supabase-js":{
-      "@supabase/auth-js":"2.61.0"
+    "@supabase/supabase-js": {
+      "@supabase/auth-js": "2.61.0"
     }
   }
 }
