--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "ngx-toastr": "^19.0.0",
     "postcss": "^8.5.3",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.22.2",
     "tailwindcss": "^4.1.5",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
